@@ -100,6 +100,7 @@ Miscellaneous
 - when a restart occurs, SCIP now asserts (during EXITSOLVE) that all relaxation-only variables are unlocked and
   only captured by the transformed problem.
 - Avoid redundant calls to LP solver when LP is already flushed and solved
+- In SCIPdebugMsg(), SCIPsetDebugMsg(), SCIPstatDebugMsg() strip directory from filename.
 
 Known bugs
 ----------
